[package]
name = "killall"
version = "0.1.0"
authors = ["Nicolas Hahn <nicolas@stonespring.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
nix = "0.18.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
